trunk/src/objects/Activity__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModifiedBy__c</fullName>
        <label>ModifiedBy</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <label>ProjectId</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>